--- a/src/index.css
+++ b/src/index.css
@@ -48,23 +48,26 @@
     animation: pulse 2s infinite;
 }
 /* Vertical Scroll */
-.scroll-container {
-  display: flex;
-  gap: 1rem;
-  overflow-x: auto;
-  padding: 1rem;
-  scroll-snap-type: x mandatory;
+@media (max-width: 768px) {
+    .scroll-container {
+      display: flex;
+      gap: 1rem;
+      overflow-x: auto;
+      padding: 1rem;
+      scroll-snap-type: x mandatory;
+    }
+
+    .scroll-container::-webkit-scrollbar {
+      display: none; /* optional: hide scrollbar */
+    }
+
+    .scroll-container div {
+      width: 90%;
+      /* height: 150px; */
+      /* background: lightblue; */
+      border-radius: 8px;
+      flex-shrink: 0;
+      scroll-snap-align: start;
+    }
 }
 
-.scroll-container::-webkit-scrollbar {
-  display: none; /* optional: hide scrollbar */
-}
-
-.scroll-item {
-  min-width: 60%;
-  height: 150px;
-  /* background: lightblue; */
-  border-radius: 8px;
-  flex-shrink: 0;
-  scroll-snap-align: start;
-}
